newclay/test/Compiler/Resolver/Fail/IfExprStatementExprBindingOnlyInExpr1/main.clay
main() {
    return (if (var x = true; x) x else x) + x;
}
